# authorization-server

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  diesel.toml
migrations/2021-04-23-061418_users/: down.sql  up.sql
proto/: main.proto  message.proto  user.proto
src/: client.rs  config.rs  error.rs  schema.rs  server.rs
src/handler/: mod.rs  user.rs
src/model/request/: mod.rs
src/model/response/: mod.rs
src/service/: user.rs
src/util/: jwt.rs  mod.rs  pagination.rs  password.rs  random.rs
