[package]
name = "sora-user-server-grpc"
version = "0.1.0"
authors = ["jcsora <jcsora@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
dotenv = "0.15.0"
url = "2.2.1"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
diesel = { version = "1.4.6", features = ["extras", "mysql"] }
chrono = "0.4.19"
tokio = { version = "1.4.0", features = ["rt-multi-thread", "time", "macros", "signal"]}
#futures = "0.3.15"
anyhow = "1.0.39"
thiserror = "1.0.24"
config = "0.11.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
rand = { version = "0.8.3", features = ["default"] }
tonic = "0.4.1"
prost = "0.7.0"
prost-derive = "0.7.0"
rust-argon2 = "0.8.3"
once_cell = "1.7.2"
redis = { version = "0.20.1", features = ["default", "tokio-comp", "r2d2", "connection-manager"]}
jsonwebtoken = "7.2.0"

[build-dependencies]
tonic-build = "0.4.1"
